major ConnectivityHandler refactor
- removed never used tryReconnect code
- removed pointless extra data modification
- collapsed formMulti into a single function
- added forEachPosition consumer to clean up code
- added private `Sizing` record to reduce repetative calculations
- cleaned up bound-checking and moved it to a new `sizedAlignedBounded` function
- moved non-simulated part of `tryToFormNewMultiOfWidth` into `tryToFormNewMulti`'s non-simulated part.
- split off simulated part of `tryToFormNewMulti` into new `getSizing` function
- inlined remaining `tryToFormNewMultiOfWidth` code into to `getSizing`
- inline `makeCreationQueue` and make `creationQueue` of type `PriorityQueue<Pair<Sizing, T>>`
- changed `tryToFormNewMulti`:
  - uses Sizing from queue rather than recalculating
  - now returns void
  - renamed to `assembleMultiWithSize`